tests/errors/less_than_complex.eff
let h = (handler val x -> x) ;;
let g = (handler val x -> x) ;;

(1, 2, [h; h]) < (1, 2, []) ;; (* Here we are lucky. *)

(1, 2, [h; h]) < (1, 2, [h]) ;; (* Still lucky, as compare h with itself so we know it is equal. *)

(1, 2, [h]) < (1, 2, [g]) ;; (* This breaks *)
